[project]
name = "mamba_autoencoder_transformer"
version = "0.1.0"
description = "Transformer in autoencoder configuration with bottleneck using standard and mamba attention"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.1",
    "torch>=2.9.1",
    "tiktoken>=0.8.0",
]
